# safe-kill

./: AGENTS.md  Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
src/: ancestry.rs  cli.rs  config.rs  error.rs  init.rs  killer.rs  lib.rs  main.rs  policy.rs  port.rs  process_info.rs  signal.rs
tests/: e2e_tests.rs  integration_tests.rs
