[package]
name = "safe-kill"
version = "26.3.100"
edition = "2024"
rust-version = "1.85"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "Safe process termination tool for AI agents with ancestry-based access control"
license = "MIT"
repository = "https://github.com/owayo/safe-kill"
keywords = ["process", "kill", "safety", "ai", "agent"]
categories = ["command-line-utilities"]

[lib]
name = "safe_kill"
path = "src/lib.rs"

[[bin]]
name = "safe-kill"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5.60", features = ["derive"] }

# Process information (cross-platform)
sysinfo = "0.38.2"

# Unix signal handling
nix = { version = "0.31.2", features = ["signal", "process"] }

# Configuration file parsing
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }

# Home directory detection
dirs = "6.0.0"

# Port-to-process detection
netstat2 = "0.11.2"

# Error handling
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"

[profile.release]
lto = true
strip = true
