[package]
name = "safe-kill"
version = "26.3.101"
edition = "2024"
rust-version = "1.85"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "Safe process termination tool for AI agents with ancestry-based access control"
license = "MIT"
repository = "https://github.com/owayo/safe-kill"
keywords = ["process", "kill", "safety", "ai", "agent"]
categories = ["command-line-utilities"]

[lib]
name = "safe_kill"
path = "src/lib.rs"

[[bin]]
name = "safe-kill"
path = "src/main.rs"

[dependencies]
# CLI 引数解析
clap = { version = "4.6.1", features = ["derive"] }

# プロセス情報取得（クロスプラットフォーム）
sysinfo = "0.38.4"

# Unix シグナル処理
nix = { version = "0.31.2", features = ["signal", "process"] }

# 設定ファイル解析
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

# ホームディレクトリ検出
dirs = "6.0.0"

# ポート使用プロセス検出
netstat2 = "0.11.2"

# エラーハンドリング
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
lto = true
strip = true
